--- a/src/app/main/pages/science/science.component.scss
+++ b/src/app/main/pages/science/science.component.scss
@@ -1,12 +1,19 @@
 @import '../../../../typography/typography';
 
+.mat-expansion-panel-header {
+  display: flex;
+}
+
 .mat-expansion-panel-header-title {
   @include h5-desktop($font-size: 24px);
+  flex: 1;
 }
+
 .mat-expansion-panel-header-description {
   display: flex;
   justify-content: flex-end;
   margin-right: 0;
+  flex: 1;
 }
 
 .mat-expansion-panel {
